<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/transferFragment">

    <fragment
        android:id="@+id/macroDroidGuideFragment"
        android:name="com.pal.ussd.ui.setup.MacroDroidGuideFragment"
        android:label="إعداد MacroDroid">
        <action
            android:id="@+id/action_macroDroidGuide_to_transfer"
            app:destination="@id/transferFragment"
            app:popUpTo="@id/macroDroidGuideFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/setupFragment"
        android:name="com.pal.ussd.ui.setup.SetupFragment"
        android:label="@string/setup_title">
        <action
            android:id="@+id/action_setup_to_transfer"
            app:destination="@id/transferFragment"
            app:popUpTo="@id/setupFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/transferFragment"
        android:name="com.pal.ussd.ui.transfer.TransferFragment"
        android:label="@string/transfer_title">
        <action
            android:id="@+id/action_transfer_to_setup"
            app:destination="@id/setupFragment" />
        <action
            android:id="@+id/action_transfer_to_macrodroid_guide"
            app:destination="@id/macroDroidGuideFragment" />
        <action
            android:id="@+id/action_transfer_to_progress"
            app:destination="@id/progressFragment" />
    </fragment>

    <fragment
        android:id="@+id/progressFragment"
        android:name="com.pal.ussd.ui.progress.ProgressFragment"
        android:label="@string/progress_title">
        <action
            android:id="@+id/action_progress_to_transfer"
            app:destination="@id/transferFragment"
            app:popUpTo="@id/transferFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>
